# stitcher-proxy

./: .npmignore  INTEGRATIONS-RESEARCH.md  LAUNCH.md  LICENSE  README.md  REVIEW.md  install.sh  package.json  pyproject.toml  setup.py
docs/integrations/: claude-code.md  codex.md  cursor.md  generic.md  openclaw.md
plugins/claude-code/: README.md
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/commands/: neverforget-sessions.md  neverforget-status.md
plugins/claude-code/hooks/: hooks.json
plugins/claude-code/scripts/: ensure-proxy.sh
plugins/openclaw/: SKILL.md
plugins/openclaw/scripts/: ensure-proxy.sh
src/: config.mjs  engine.mjs  server.mjs  storage.mjs  update_server.mjs
stitcher_proxy/: __init__.py  __main__.py  config.py  engine.py  server.py  storage.py
