[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stitcher-proxy"
version = "0.1.0"
description = "Universal, infinite-memory proxy for LLM APIs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Nicolai", email = "nicolai@example.com" },
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "httpx>=0.27.0"
]

[project.scripts]
stitcher-proxy = "stitcher_proxy.__main__:main"
